--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -70,6 +70,7 @@ nobase_follyinclude_HEADERS = \
 	detail/MemoryIdler.h \
 	detail/MPMCPipelineDetail.h \
 	detail/RangeCommon.h \
+	detail/RangeSse42.h \ 
 	detail/Sleeper.h \
 	detail/SlowFingerprint.h \
 	detail/SocketFastOpen.h \
